initial JRE 8 for Windows download (running sample)